--- a/src/markdown/mas/packages.bib
+++ b/src/markdown/mas/packages.bib
@@ -3,15 +3,15 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2022},
+  year = {2023},
   url = {https://www.R-project.org/},
 }
 
 @Manual{R-Distance,
   title = {Distance: Distance Sampling Detection Function and Abundance Estimation},
-  author = {David Lawrence Miller},
+  author = {David Lawrence Miller and T.J. Clark-Wolf},
   year = {2022},
-  note = {R package version 1.0.6},
+  note = {R package version 1.0.7},
   url = {https://github.com/DistanceDevelopment/Distance/},
 }
 
